# fetch

./: COMPLETE_SYSTEM.md  FINAL_SUMMARY.md  HACKATHON_READY.md  QUICK_START.md  README.md
client_stuff/scripts/: main.py  mcp.py  start.py  stop.py
client_stuff/src/intent/: __init__.py  intent_service.py
client_stuff/src/server/: server.py
docs/: DEPLOY_TO_RENDER.md  PROJECT_SUMMARY.md
frontend/: README.md  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/__tests__/: negotiate-integration.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/balance/: route.ts
frontend/app/api/negotiate/[intentId]/: route.ts
frontend/app/intent/[id]/: page.tsx
frontend/components/: agent-profile.tsx  balance-display-simple.tsx  intent-card.tsx  intent-detail-client.tsx  intents-list-realtime.tsx  negotiation-stream.tsx  user-profile.tsx
frontend/lib/: database.types.ts  supabase.ts
landing/: index.html
mobile/src/locus/: __init__.py  locus.py
mobile/src/server/: __init__.py
negotiator/: README.md  RUN_ALL_TESTS.md  SYSTEM_COMPLETE.md  a2a_server.py  agent.py  database.py  demo.py  main.py  orchestrator.py  payments.py  pyproject.toml  requirements.txt  transaction_tracker.py
negotiator/tests/: __init__.py  test_a2a.py  test_agent.py  test_agent_to_agent.py  test_blockchain_e2e.py  test_database.py  test_initiate.py  test_integration.py  test_mcp_stage1.py  test_mcp_stage2.py  test_payment_negotiation.py  test_seller_agent.py  test_ultimate_e2e.py
